register member, language

--- a/languages/en.json
+++ b/languages/en.json
@@ -5,5 +5,29 @@
     "Login": "Login",
     "Register": "Register",
     "Profile": "Profile",
-    "Logout": "Logout"
+    "Logout": "Logout",
+    "Demo Website Nodejs": "Demo Website Nodejs",
+    "Account": "Account",
+    "Member Register": "Member Register",
+    "I already have an account": "I already have an account",
+    "First Name": "First Name",
+    "Please input first name": "Please input first name",
+    "Last Name": "Last Name",
+    "Please input last name": "Please input last name",
+    "Email Address": "Email Address",
+    "Please input email": "Please input email",
+    "Please input password": "Please input password",
+    "Password": "Password",
+    "Confirm Password": "Confirm Password",
+    "Newsletter Register": "Newsletter Register",
+    "Do you want to subscribe to our promotional emails?": "Do you want to subscribe to our promotional emails?",
+    "Yes": "Yes",
+    "No": "No",
+    "I have read and agree to the Terms": "I have read and agree to the Terms",
+    "Hoc Nodejs": "Hoc Nodejs",
+    "Dashboard": "Dashboard",
+    "Email address invalid, please check again.": "Email address invalid, please check again.",
+    "password invalid, Password must be at least %d characters or more": "password invalid, Password must be at least %d characters or more",
+    "Confirm password is not the same, please check again": "Confirm password is not the same, please check again",
+    "You have to accept with our terms to continute": "You have to accept with our terms to continute"
 }
