--- a/languages/vi.json
+++ b/languages/vi.json
@@ -7,5 +7,6 @@
     "Profile": "Hồ sơ",
     "Logout": "Đăng xuất",
     "Account": "Tài khoản",
-    "Demo Website Nodejs": "Demo Website Nodejs"
+    "Demo Website Nodejs": "Demo Website Nodejs",
+    "Hoc Nodejs": "Hoc Nodejs"
 }
